--- a/views/user/header.ejs
+++ b/views/user/header.ejs
@@ -5,9 +5,14 @@
   <title>VintageRags</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
   <link rel="stylesheet" href="../../static/css/magiczoom.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
   <link rel="stylesheet" href="../static/fonts/icomoon/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
+
+
 
   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
   <link rel="stylesheet" href="../static/css/magnific-popup.css">
@@ -19,6 +24,7 @@
   <link rel="stylesheet" href="../static/css/aos.css">
 
   <link rel="stylesheet" href="../static/css/style.css">
+  
 
 </head>
 
@@ -68,7 +74,7 @@
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li><a href="/">Home</a></li>
             <li class="has-children">
-              <a href="about.html">Categories</a>
+              <a href="#">Categories</a>
               <ul class="dropdown">
                 <% categories.forEach(category => { %>
                   <li><a href="/shop?category=<%= category._id %>"><%= category.name %></a></li>
