--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -26,9 +26,12 @@
                     Latest
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                    <a class="dropdown-item" href="#">Men</a>
-                    <a class="dropdown-item" href="#">Women</a>
-                    <a class="dropdown-item" href="#">Children</a>
+                    <ul class="dropdown">
+                      <% categories.forEach(category => { %>
+                        <li><a href="/shop?category=<%= category._id %>"><%= category.name %></a></li>
+                    <% }); %>
+                    
+                    </ul>
                   </div>
                 </div>
                 <div class="btn-group">
@@ -36,7 +39,14 @@
                     data-toggle="dropdown">Reference</button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuReference">
                     <a class="dropdown-item" href="#">Relevance</a>
-                    <a class="dropdown-item" href="#">Name, A to Z</a>
+                    <% if (categories.length > 0) { %>
+                      <% categories.forEach(category => { %>
+                          <a class="dropdown-item" href="/shop?category=<%= category._id %>&sortBy=nameAZ">Name, A to Z</a>
+                      <% }); %>
+                  <% } else { %>
+                      <a class="dropdown-item" href="/shop?sortBy=nameAZ">Name, A to Z</a>
+                  <% } %>
+                  
                     <a class="dropdown-item" href="#">Name, Z to A</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Price, low to high</a>
@@ -84,12 +94,16 @@
           <div class="border p-4 rounded mb-4">
             <h3 class="mb-3 h6 text-uppercase text-black d-block">Categories</h3>
             <ul class="list-unstyled mb-0">
-              <li class="mb-1"><a href="#" class="d-flex"><span>Men</span> <span
-                    class="text-black ml-auto">(2,220)</span></a></li>
-              <li class="mb-1"><a href="#" class="d-flex"><span>Women</span> <span
-                    class="text-black ml-auto">(2,550)</span></a></li>
-              <li class="mb-1"><a href="#" class="d-flex"><span>Children</span> <span
-                    class="text-black ml-auto">(2,124)</span></a></li>
+              <% categories.forEach(category => { %>
+                <li class="mb-1">
+                  <a href="/shop?category=<%= category._id %>" class="d-flex">
+                    <span><%= category.name %></span>
+                    <span class="text-black ml-auto">
+                      (<%= categoryCounts[category._id] || 0 %>)
+                  </span> 
+                  </a>
+                </li>
+              <% }); %>
             </ul>
           </div>
 
@@ -99,92 +113,9 @@
               <div id="slider-range" class="border-primary"></div>
               <input type="text" name="text" id="amount" class="form-control border-0 pl-0 bg-white" disabled="" />
             </div>
-
-            <div class="mb-4">
-              <h3 class="mb-3 h6 text-uppercase text-black d-block">Size</h3>
-              <label for="s_sm" class="d-flex">
-                <input type="checkbox" id="s_sm" class="mr-2 mt-1"> <span class="text-black">Small (2,319)</span>
-              </label>
-              <label for="s_md" class="d-flex">
-                <input type="checkbox" id="s_md" class="mr-2 mt-1"> <span class="text-black">Medium (1,282)</span>
-              </label>
-              <label for="s_lg" class="d-flex">
-                <input type="checkbox" id="s_lg" class="mr-2 mt-1"> <span class="text-black">Large (1,392)</span>
-              </label>
-            </div>
-
-            <div class="mb-4">
-              <h3 class="mb-3 h6 text-uppercase text-black d-block">Color</h3>
-              <a href="#" class="d-flex color-item align-items-center">
-                <span class="bg-danger color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Red
-                  (2,429)</span>
-              </a>
-              <a href="#" class="d-flex color-item align-items-center">
-                <span class="bg-success color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Green
-                  (2,298)</span>
-              </a>
-              <a href="#" class="d-flex color-item align-items-center">
-                <span class="bg-info color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Blue
-                  (1,075)</span>
-              </a>
-              <a href="#" class="d-flex color-item align-items-center">
-                <span class="bg-primary color d-inline-block rounded-circle mr-2"></span> <span
-                  class="text-black">Purple (1,075)</span>
-              </a>
-            </div>
-
           </div>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-md-12">
-          <div class="site-section site-blocks-2">
-            <div class="row justify-content-center text-center mb-5">
-              <div class="col-md-7 site-section-heading pt-4">
-                <h2>Categories</h2>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
-                <a class="block-2-item" href="#">
-                  <figure class="image">
-                    <img src="../static/images/women.jpg" alt="" class="img-fluid">
-                  </figure>
-                  <div class="text">
-                    <span class="text-uppercase">Collections</span>
-                    <h3>Women</h3>
-                  </div>
-                </a>
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-                <a class="block-2-item" href="#">
-                  <figure class="image">
-                    <img src="../static/images/children.jpg" alt="" class="img-fluid">
-                  </figure>
-                  <div class="text">
-                    <span class="text-uppercase">Collections</span>
-                    <h3>Children</h3>
-                  </div>
-                </a>
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-                <a class="block-2-item" href="#">
-                  <figure class="image">
-                    <img src="../static/images/men.jpg" alt="" class="img-fluid">
-                  </figure>
-                  <div class="text">
-                    <span class="text-uppercase">Collections</span>
-                    <h3>Men</h3>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
     </div>
   </div>
 
