--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -12,6 +12,71 @@
     </div>
   </div>
 
+  <div class="row justify-content-center">
+    <div class="col-md-9 py-2">
+      <h2 class="h3 mb-3 text-black text-center">Coupon Code</h2>
+      <div class="p-3 p-lg-5 border bg-white">
+        <!-- Button to open the modal -->
+        <button onclick="openModal()" class="d-block mx-auto mb-3">
+          <h2>Available Coupons</h2>
+        </button>
+  
+        <!-- Modal -->
+        <div id="couponModal" class="modal">
+          <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <ul>
+              <% if(availableCoupons.length> 0) { %>
+              <% availableCoupons.forEach(coupon=> { %>
+              <li>
+                <div class="row">
+                  <div class="col-3">
+                    <%= coupon.couponCode %> &nbsp;&nbsp;
+                    <% if (coupon.type==="percentageDiscount" ) { %>
+                    <p>
+                      <%= coupon.discount %>% off on Rs.<%= coupon.minimumPrice %> purchase (Maximum Redeemable:
+                      <%= coupon.maxRedeem %>)
+                    </p><br>
+                    <% } else { %>
+                    <p>Flat Rs. <%= coupon.discount %> off on <%= coupon.minimumPrice %> purchase</p><br>
+                    <% } %>
+                  </div>
+                  <div class="col-3 mt-2">
+                    <button onclick="copyToClipboard('<%= coupon.couponCode %>')">Copy Code</button>
+                  </div>
+                </div>
+              </li>
+              <% }); %>
+              <% } else { %>
+              <p>No coupons available</p>
+              <% } %>
+            </ul>
+          </div>
+        </div>
+  
+        <!-- Coupon code input form -->
+        <form>
+          <label for="c_code" class="text-black mb-3">Enter your coupon code if you have one</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="c_code" placeholder="Coupon Code" aria-label="Coupon Code"
+              aria-describedby="button-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-black btn-sm" type="button" id="button-addon2" onclick="couponApply()">Apply</button>
+            </div>
+            <div>
+              <button style="color: black;border: solid black;margin-left: 3px;" class="btn btn-white-outline btn-sm"
+                type="button" id="button-addon3" onclick="couponRevoke()">Clear</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  
+  
+  
+  
   <form id="orderform">
     <div class="site-section">
       <div class="container">
@@ -64,24 +129,8 @@
                   </div>
           </div>
 
-          <!-- Right Column for Coupon Code and Your Order -->
+          <!-- Right Column for Your Order -->
           <div class="col-md-6">
-            <div class="row mb-5">
-              <div class="col-md-12">
-                <h2 class="h3 mb-3 text-black">Coupon Code</h2>
-                <div class="p-3 p-lg-5 border">
-                  <label for="c_code" class="text-black mb-3">Enter your coupon code if you have one</label>
-                  <div class="input-group w-75">
-                    <input type="text" class="form-control" id="c_code" placeholder="Coupon Code"
-                      aria-label="Coupon Code" aria-describedby="button-addon2">
-                    <div class="input-group-append">
-                      <button class="btn btn-primary btn-sm" type="button" id="button-addon2">Apply</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
             <input type="hidden" id="pay" name="pay" value="0" />
             <div class="col-md-12 mb-5">
               <h2 class="h3 mb-3 text-black">Your Order</h2>
@@ -110,12 +159,16 @@
                           <input type="hidden" id="amount" name="amount" value="<%= data.total %>">
                           <input type="hidden" id="wallet" name="wallet" value="0" />
                           <td class="text-black font-weight-bold">Cart Subtotal:</td>
-                          <td class="text-black font-weight-bold">₹<%= data.total %>
+                          <td class="text-black font-weight-bold">₹<span id="subt"><%= data.total %></span>
                           </td>
                         </tr>
                         <tr>
                           <td class="text-black font-weight-bold">Discount:</td>
-                          <td class="text-black font-weight-bold">₹0</td>
+                          <td class="text-black font-weight-bold"><span id="dicprice">0</span></td>
+                        </tr>
+                        <tr class="wallet-row" style="display: none;">
+                          <td class="text-black font-weight-bold">Wallet:</td>
+                          <td class="text-black font-weight-bold">-₹<span id="walletReduce">0</span></td>
                         </tr>
                         <tr>
                           <td class="text-black font-weight-bold">Delivery:</td>
@@ -172,6 +225,42 @@
       </div>
     </div>
   </form>
+
+  <script>
+    function openModal() {
+      var modal = document.getElementById('couponModal');
+      modal.style.display = 'block';
+    }
+
+    function closeModal() {
+      var modal = document.getElementById('couponModal');
+      modal.style.display = 'none';
+    }
+
+    function copyToClipboard(couponCode) {
+      var tempInput = document.createElement('input');
+      tempInput.value = couponCode;
+      document.body.appendChild(tempInput);
+
+      tempInput.select();
+      document.execCommand('copy');
+
+      document.body.removeChild(tempInput);
+
+      
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+      // Close the modal if the user clicks outside of it
+      window.addEventListener('click', function (event) {
+        var modal = document.getElementById('couponModal');
+        if (event.target === modal) {
+          closeModal();
+        }
+      });
+    });
+  </script>
+
   <script>
     function handlePaymentMethodSelection() {
       const selectedPaymentMethod = document.querySelector(
@@ -310,8 +399,14 @@
               formsubmit(amount);
             };
           } else {
+            const discountRow = document.querySelector('.wallet-row');
+            discountRow.style.display = '';
+            document.getElementById("walletReduce").innerText=`${data.amount}`
+            document.getElementById("amount").value = `${amount}`;
             const amount1 = document.getElementById("amount").value;
-            // document.getElementById("total").innerText = `${amount1 - data.amount}`;
+            console.log(amount1);
+
+            document.getElementById("total").innerText = `₹${amount1 - data.amount}`;
             document.getElementById("amount").value = `${amount1 - data.amount}`;
             document.getElementById("wallet").value = `${data.amount}`;
             Swal.fire({
@@ -333,13 +428,136 @@
           console.error('An error has occured')
         }
         function formsubmit(amount) {
-        document.getElementById("pay").value = "wallet";
-        console.log(amount);
-        document.getElementById("wallet").value = amount;
-        document.getElementById("orderform").submit();
-      }
+          document.getElementById("pay").value = "wallet";
+          console.log(amount);
+          document.getElementById("wallet").value = amount;
+          document.getElementById("orderform").submit();
+        }
       }
     }
   </script>
+
+<script>
+
+  function couponApply() {
+    const couponCode = document.getElementById('c_code').value;
+    const subtotal = document.getElementById('subt').innerText
+
+    fetch('/applyCoupon', {
+      method: "POST",
+      headers: {
+        'Content-Type': "application/json"
+      },
+      body: JSON.stringify({ couponCode, subtotal })
+    })
+      .then(response => response.json())
+      .then(data => {
+        if (data.success) {
+          Swal.fire({
+            text: "coupon applied",
+            icon: 'success',
+            confirmButtonText: 'OK',
+            customClass: {
+              title: 'text-danger',
+              popup: 'swal2-popup-custom',
+              confirmButton: 'btn btn-danger'
+            },
+            showCancelButton: false,
+            showCloseButton: true,
+            showLoaderOnConfirm: false,
+            timer: 3000
+          });
+          console.log("ivideumethi")
+          document.getElementById('dicprice').innerText = "-" + data.dicprice
+          document.getElementById('total').innerText = `${data.price}`
+          document.getElementById('amount').value = `${data.price}`
+
+
+
+        } else {
+          Swal.fire({
+            text: data.message,
+            icon: 'error',
+            confirmButtonText: 'OK',
+            customClass: {
+              title: 'text-danger',
+              popup: 'swal2-popup-custom',
+              confirmButton: 'btn btn-danger'
+            },
+            showCancelButton: false,
+            showCloseButton: true,
+            showLoaderOnConfirm: false,
+            timer: 3000
+          });
+        }
+      })
+      .catch(error => {
+        console.error('Error applying coupon:', error);
+        alert('An error occurred while applying the coupon. Please try again.');
+      });
+  }
+
+  function couponRevoke() {
+
+    const couponCode = document.getElementById('c_code').value;
+    const subtotal = document.getElementById('subt').innerText
+
+    fetch('/revokeCoupon', {
+      method: "POST",
+      headers: {
+        'Content-Type': "application/json"
+      },
+      body: JSON.stringify({ couponCode, subtotal })
+    })
+      .then(response => response.json())
+      .then(data => {
+        if (data.success) {
+          Swal.fire({
+            text: "coupon revoked",
+            icon: 'success',
+            confirmButtonText: 'OK',
+            customClass: {
+              title: 'text-danger',
+              popup: 'swal2-popup-custom',
+              confirmButton: 'btn btn-danger'
+            },
+            showCancelButton: false,
+            showCloseButton: true,
+            showLoaderOnConfirm: false,
+            timer: 3000
+          });
+          document.getElementById('dicprice').innerText = 0
+          document.getElementById('total').innerText = `${data.price}`
+          document.getElementById('amount').value =`${data.price}`
+          document.getElementById('c_code').value = ""
+
+
+
+
+        } else {
+          Swal.fire({
+            text: data.message,
+            icon: 'error',
+            confirmButtonText: 'OK',
+            customClass: {
+              title: 'text-danger',
+              popup: 'swal2-popup-custom',
+              confirmButton: 'btn btn-danger'
+            },
+            showCancelButton: false,
+            showCloseButton: true,
+            showLoaderOnConfirm: false,
+            timer: 3000
+          });
+        }
+      })
+      .catch(error => {
+        console.error('Error applying coupon:', error);
+        alert('An error occurred while applying the coupon. Please try again.');
+      });
+  }
+
+
+</script>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   <%- include ("footer.ejs") %>
